# SmolVLM-Thinking

./: .gitignore  abc.py  analyze_token_lengths.py  config.py  precompute_gainrl_indices.py  pyproject.toml  run_temperature_evaluation.py  run_vlm_average_evaluation.py  sft_train.py
gainrl_indices/: llava_cot_sorted_indices.pt
src/: evaluate_dataset_rollouts.py  temperature_zone.py
src/datasets/: load_llavacot.py
src/model_init/: add_special_tokens.py  model.py
